--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run:
           name: Initialize and plan Terraform (check plan out here before approving!)
           command: |
-            cd examples && terraform init && terraform validate
+            cd example && terraform init && terraform validate
   validate_terraform_lint:
     environment:
         AWS_DEFAULT_REGION: us-east-1
